sentinel demo optimise